kubernetes/edx-intro-course/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx:1.23.1
    ports:
    - containerPort: 80
  imagePullSecrets:
  - name: regcred
